# readstat-rs

./: .gitignore  LICENSE  MANIFEST.in  README.md  download_binaries.py  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  publish.yml
readstat-rs_dist/: entry_point.py
readstat_rs/: __init__.py  entry_point.py
